--- a/clarity-merchant-service/src/main/resources/clarity-merchant-service-spec.yml
+++ b/clarity-merchant-service/src/main/resources/clarity-merchant-service-spec.yml
@@ -10,19 +10,19 @@ info:
     url: "https://www.ethoca.com/terms-of-use"
   version: 1.0.0
 servers:
-  - url: "http://localhost:8080"
+  - url: "http://localhost:8080/api"
     description: localhost endpoint
 tags:
   - name: Clarity Merchant Service
     description: Clarity Merchant Service
 paths:
-  /api/mss-submerchants:
+  /cms-submerchants:
     post:
       tags:
         - Clarity Merchant Service
       summary: Merchant Self-Serve sub-merchant endpoint
       description: Merchant Self-Serve endpoint used to query sub-merchant resources
-      operationId: getMssSubMerchants
+      operationId: createSubMerchant
       requestBody:
         content:
           application/json:
