--- a/merchant-self-serve/pom.xml
+++ b/merchant-self-serve/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ethoca</groupId>
-    <artifactId>MerchantSelfServe</artifactId>
+    <artifactId>merchant-self-serve</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>MerchantSelfServe</name>
+    <name>merchant-self-serve</name>
     <description>Merchant Self-Serve</description>
     <properties>
         <java.version>1.8</java.version>
@@ -87,6 +87,23 @@
                         </goals>
                         <configuration>
                             <inputSpec>${project.basedir}/src/main/resources/gateway-submerchant-spec.yml</inputSpec>
+                            <generatorName>java</generatorName>
+                            <library>okhttp-gson</library>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <configOptions>
+                                <sourceFolder>src/gen/main/java</sourceFolder>
+                                <dateLibrary>java8</dateLibrary>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>execution-cms-spec</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>../clarity-merchant-service/src/main/resources/clarity-merchant-service-spec.yml</inputSpec>
                             <generatorName>java</generatorName>
                             <library>okhttp-gson</library>
                             <generateApiTests>false</generateApiTests>
