--- a/merchant-self-serve/pom.xml
+++ b/merchant-self-serve/pom.xml
@@ -20,6 +20,7 @@
         <gson.version>2.8.6</gson.version>
         <swagger-parser.version>2.0.20</swagger-parser.version>
         <gson-fire.version>1.8.3</gson-fire.version>
+        <jackson-databind-nullable.version>0.2.1</jackson-databind-nullable.version>
     </properties>
 
     <dependencies>
@@ -71,6 +72,18 @@
             <version>${swagger-parser.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>${jackson-databind-nullable.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.joschi.jackson</groupId>
+            <artifactId>jackson-datatype-threetenbp</artifactId>
+            <version>2.6.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -87,12 +100,12 @@
                         </goals>
                         <configuration>
                             <inputSpec>${project.basedir}/src/main/resources/gateway-submerchant-spec.yml</inputSpec>
-                            <generatorName>java</generatorName>
-                            <library>okhttp-gson</library>
-                            <generateApiTests>false</generateApiTests>
-                            <generateModelTests>false</generateModelTests>
+                            <generatorName>spring</generatorName>
+                            <apiPackage>com.merchant-self-serve.server.api</apiPackage>
+                            <modelPackage>com.merchant-self-serve.server.model</modelPackage>
+                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                             <configOptions>
-                                <sourceFolder>src/gen/main/java</sourceFolder>
+                                <sourceFolder>src/main/java</sourceFolder>
                                 <dateLibrary>java8</dateLibrary>
                             </configOptions>
                         </configuration>
@@ -105,11 +118,13 @@
                         <configuration>
                             <inputSpec>../clarity-merchant-service/src/main/resources/clarity-merchant-service-spec.yml</inputSpec>
                             <generatorName>java</generatorName>
+                            <apiPackage>com.merchant-self-serve.client.api</apiPackage>
+                            <modelPackage>com.merchant-self-serve.client.model</modelPackage>
                             <library>okhttp-gson</library>
                             <generateApiTests>false</generateApiTests>
                             <generateModelTests>false</generateModelTests>
                             <configOptions>
-                                <sourceFolder>src/gen/main/java</sourceFolder>
+                                <sourceFolder>src/main/java</sourceFolder>
                                 <dateLibrary>java8</dateLibrary>
                             </configOptions>
                         </configuration>
