--- a/clarity-merchant-service/pom.xml
+++ b/clarity-merchant-service/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>clarity-merchant-service</name>
     <description>Clarity Merchant Service</description>
+
     <properties>
         <java.version>1.8</java.version>
         <openapi-generator.version>4.3.1</openapi-generator.version>
@@ -20,7 +21,10 @@
         <gson.version>2.8.6</gson.version>
         <swagger-parser.version>2.0.20</swagger-parser.version>
         <gson-fire.version>1.8.3</gson-fire.version>
+        <jackson-databind-nullable.version>0.2.1</jackson-databind-nullable.version>
+        <jackson-datatype-threetenbp.version>2.6.4</jackson-datatype-threetenbp.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -68,6 +72,18 @@
             <version>${swagger-parser.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>${jackson-databind-nullable.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.joschi.jackson</groupId>
+            <artifactId>jackson-datatype-threetenbp</artifactId>
+            <version>${jackson-datatype-threetenbp.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -83,16 +99,22 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/src/main/resources/eliminator-domain-spec.yml
-                            </inputSpec>
+
+                            <inputSpec>${project.basedir}/src/main/resources/eliminator-domain-spec.yml</inputSpec>
+
+<!--                            <auth>Authorization: token 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</auth>-->
+<!--                            <inputSpec>https://raw.githubusercontent.com/wilterson-franco/swagger_poc/main/clarity-merchant-service-spec/src/main/resources/eliminator-domain-spec.yml</inputSpec>-->
+
                             <generatorName>java</generatorName>
+                            <apiPackage>com.clarity-merchant-service.client.api</apiPackage>
+                            <modelPackage>com.clarity-merchant-service.client.model</modelPackage>
                             <library>okhttp-gson</library>
                             <generateApiTests>false</generateApiTests>
                             <generateModelTests>false</generateModelTests>
                             <generateModelDocumentation>false</generateModelDocumentation>
                             <generateApiDocumentation>false</generateApiDocumentation>
                             <configOptions>
-                                <sourceFolder>src/gen/main/java</sourceFolder>
+                                <sourceFolder>src/main/java</sourceFolder>
                                 <dateLibrary>java8</dateLibrary>
                             </configOptions>
                         </configuration>
@@ -103,13 +125,20 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
+
                             <inputSpec>${project.basedir}/src/main/resources/clarity-merchant-service-spec.yml</inputSpec>
-                            <generatorName>java</generatorName>
-                            <library>okhttp-gson</library>
-                            <generateApiTests>false</generateApiTests>
-                            <generateModelTests>false</generateModelTests>
+
+<!--                            <auth>Authorization: token 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</auth>-->
+<!--                            <inputSpec>https://raw.githubusercontent.com/wilterson-franco/swagger_poc/main/clarity-merchant-service-spec/src/main/resources/clarity-merchant-service-spec.yml</inputSpec>-->
+
+                            <generatorName>spring</generatorName>
+                            <apiPackage>com.clarity-merchant-service.server.api</apiPackage>
+                            <modelPackage>com.clarity-merchant-service.server.model</modelPackage>
+                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
+                            <generateModelDocumentation>false</generateModelDocumentation>
+                            <generateApiDocumentation>false</generateApiDocumentation>
                             <configOptions>
-                                <sourceFolder>src/gen/main/java</sourceFolder>
+                                <sourceFolder>src/main/java</sourceFolder>
                                 <dateLibrary>java8</dateLibrary>
                             </configOptions>
                         </configuration>
