--- a/clarity-merchant-service/pom.xml
+++ b/clarity-merchant-service/pom.xml
@@ -99,12 +99,8 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-
-                            <inputSpec>${project.basedir}/src/main/resources/eliminator-domain-spec.yml</inputSpec>
-
-<!--                            <auth>Authorization: token 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</auth>-->
-<!--                            <inputSpec>https://raw.githubusercontent.com/wilterson-franco/swagger_poc/main/clarity-merchant-service-spec/src/main/resources/eliminator-domain-spec.yml</inputSpec>-->
-
+                            <auth>Authorization: token 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</auth>
+                            <inputSpec>https://raw.githubusercontent.com/wilterson-franco/swagger_poc/main/clarity-merchant-service-spec/src/main/resources/eliminator-domain-spec.yml</inputSpec>
                             <generatorName>java</generatorName>
                             <apiPackage>com.clarity-merchant-service.client.api</apiPackage>
                             <modelPackage>com.clarity-merchant-service.client.model</modelPackage>
@@ -126,7 +122,7 @@
                         </goals>
                         <configuration>
 
-                            <inputSpec>${project.basedir}/src/main/resources/clarity-merchant-service-spec.yml</inputSpec>
+                            <inputSpec>../clarity-merchant-service-spec/src/main/resources/clarity-merchant-service-spec.yml</inputSpec>
 
 <!--                            <auth>Authorization: token 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</auth>-->
 <!--                            <inputSpec>https://raw.githubusercontent.com/wilterson-franco/swagger_poc/main/clarity-merchant-service-spec/src/main/resources/clarity-merchant-service-spec.yml</inputSpec>-->
